--- a/index.html
+++ b/index.html
@@ -23,25 +23,73 @@
             <h2>This website is awesome</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p> 
-            <button> Sign Up</button>
+            <button class="header-button"> Sign Up</button>
         </div>
         <div class="hero-img">
-            Image
+            
         </div>
 
     </div>
-</div>
-    <div>
+</div> <!-- end of header -->
+    <div class="mid-section">
+        <div class="mid-text">
+            <p>Some random information.</p>
+        </div>
+        <div class="squares">
+            <div class="sq">
+                <div class="box">
+                </div>
+                <div>
+                    <p class="box-text">this is some subtext under an illustration or image </p>
+                </div>
+            </div>
+            <div class="sq">
+                <div class="box">
+                </div>
+                <div>
+                    <p class="box-text">this is some subtext under an illustration or image </p>
+                </div>
+            </div>
+            <div class="sq">
+                <div class="box">
+                </div>
+                <div>
+                    <p class="box-text">this is some subtext under an illustration or image </p>
+                </div>
+            </div>
+            <div class="sq">
+                <div class="box">
+                </div>
+                <div>
+                    <p class="box-text">this is some subtext under an illustration or image </p>
+                </div>
+            </div>
+        </div>
+    </div> <!-- end of mid section -->
+    <div class="grey-section">
+        <div class="quote-box">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is thaty it looks nice.</p>
+            <p class="reference">- Thor, God of Thunder</p>
+        </div>
 
-    </div>
-    <div>
+    </div> <!--end of grey section-->
+    <div class="bottom-section">
+        <div class="blue-box">
+            <div class="blue-text">
+            <p><b>Call to action! It's time!</b> <br>
+            Sign up for product by clicking that button right over there!</p>
+             </div>
+             <div class="blue-button">
+                 <button class="bottom-button">
+                     Sign up
+                 </button>
 
-    </div>
-    <div>
+             </div>
+        </div>
 
     </div>
     <footer>
-        Copyright The Odin Project 2022
+        Copyright @ The Odin Project 2022
     </footer>
 </body>
 </html>
